# landscore-backend

./: .env  .env.example  .gitignore  Makefile  README.md  SERVICES.md  docker-compose.yml  test.http
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/app/: celery_app.py  config.py  main.py  tasks.py  yandex_ai.py
services/ai-orchestrator/app/agents/code/: candidate_filtering.py  data_request.py  fact_normalization.py  geo.py  infrastructure.py  land_scout.py  market.py  profitability_calculator.py  scenario_agents.py  scenario_ranking.py  scenario_selector.py  search_planning.py  shortlist_ranking.py
services/ai-orchestrator/app/agents/llm/: base_llm.py  chief_decision.py  client_explanation.py  critical_risk.py  deal_fit.py  document_extraction.py  land_use.py  legal.py  next_steps.py  object_identification.py  (+6 more)
services/ai-orchestrator/app/clients/: __init__.py  data_collector_client.py  geo_client.py  proto_imports.py
services/ai-orchestrator/app/pipeline/: base.py  check_pipeline.py  context.py  runner.py  search_pipeline.py
services/ai-orchestrator/app/prompts/: chief_decision.txt  client_explanation.txt  critical_risk.txt  deal_fit.txt  document_extraction.txt  land_use_agent.txt  legal_agent.txt  next_steps.txt  object_identification.txt  report.txt  request_understanding.txt  restrictions_agent.txt  search_criteria.txt
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  errors.py  main.py  models.py  price_analysis.py
services/api-gateway/app/clients/: __init__.py
services/api-gateway/app/middleware/: auth.py
services/api-gateway/app/routers/: alice.py  auth.py  cadastral.py  checks.py  documents.py  searches.py
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml  start.sh
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_initial.py
services/auth-service/app/: __init__.py  config.py  database.py  main.py  models.py  servicer.py
services/check-service/: Dockerfile  alembic.ini  pyproject.toml  start.sh
services/check-service/alembic/: env.py
services/check-service/alembic/versions/: 0001_initial.py
services/check-service/app/: __init__.py  celery_client.py  config.py  constants.py  database.py  main.py  models.py  servicer.py
services/document-service/: Dockerfile  pyproject.toml
services/document-service/app/: main.py
shared/: pyproject.toml
shared/landscore_shared/: __init__.py  exceptions.py  logging.py
shared/landscore_shared/proto_generated/: ai_orchestrator_pb2.py  ai_orchestrator_pb2_grpc.py  auth_pb2.py  auth_pb2_grpc.py  check_pb2.py  check_pb2_grpc.py  data_collector_pb2.py  data_collector_pb2_grpc.py  document_pb2.py  document_pb2_grpc.py  geo_pb2.py  geo_pb2_grpc.py  market_pb2.py  market_pb2_grpc.py  search_pb2.py  search_pb2_grpc.py
(+60 files in other folders)
