[project]
name = "ai-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.67",
    "grpcio-tools>=1.67",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "openai>=1.57",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.0",
    "tenacity>=9.0",
    "jinja2>=3.1",
]
