[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.67",
    "grpcio-tools>=1.67",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "structlog>=24.0",
    "httpx>=0.28",
]
