[project]
name = "check-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.67",
    "grpcio-tools>=1.67",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.2",
    "pydantic-settings>=2.6",
    "structlog>=24.0",
]
