[project]
name = "document-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.67",
    "grpcio-tools>=1.67",
    "minio>=7.2",
    "pypdf>=5.1",
    "pillow>=11.0",
    "pytesseract>=0.3",
    "weasyprint>=63.0",
    "pydantic-settings>=2.6",
    "structlog>=24.0",
]
